[gd_scene load_steps=5 format=2]

[ext_resource path="res://scenes/map/map.gd" type="Script" id=1]
[ext_resource path="res://addons/Godot-Touch-Input-Manager/input_detection.tscn" type="PackedScene" id=2]

[sub_resource type="PlaneShape" id=2]

[sub_resource type="PlaneShape" id=1]

[node name="map" type="Node"]
script = ExtResource( 1 )

[node name="StaticBody" type="StaticBody" parent="."]
collision_mask = 0

[node name="CollisionShape2" type="CollisionShape" parent="StaticBody"]
shape = SubResource( 2 )

[node name="tile_holder" type="Spatial" parent="."]

[node name="input_detection" parent="." instance=ExtResource( 2 )]

[node name="Area" type="Area" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.708007, 0 )
collision_mask = 0
monitorable = false

[node name="CollisionShape" type="CollisionShape" parent="Area"]
shape = SubResource( 1 )

[connection signal="any_gesture" from="input_detection" to="." method="_on_input_detection_any_gesture"]
[connection signal="input_event" from="Area" to="." method="_on_Area_input_event"]
